--- a/Python first steps, day 1 -- 2022-11Nov-21.ipynb
+++ b/Python first steps, day 1 -- 2022-11Nov-21.ipynb
@@ -874,7 +874,135 @@
    "source": [
     "# Comparing things\n",
     "\n",
-    "Let's say that I have values in variables `x` and `y`, and I want to know if they are the same value. "
+    "Let's say that I have values in variables `x` and `y`, and I want to know if they are the same value. How can I find that out?\n",
+    "\n",
+    "We might think that we could use `=` for that. But we've already used `=` for assignment, so we can't.\n",
+    "\n",
+    "Instead, we'll use a special operator, `==`, which is similar to mathematical equals. It returns a `True` or `False` value, indicating if the values on its left and on its right are the same."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = 10\n",
+    "y = 10\n",
+    "\n",
+    "x == y   # this should return True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = 10\n",
+    "y = 20\n",
+    "\n",
+    "x == y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = 'abcd'\n",
+    "y = 'abcd'\n",
+    "\n",
+    "x == y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = 'abcd'\n",
+    "y = 'abcd '\n",
+    "\n",
+    "x == y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = 'abcd'\n",
+    "y = 'Abcd'\n",
+    "\n",
+    "x == y"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Comparison operators\n",
+    "\n",
+    "We often want to compa"
    ]
   }
  ],
