--- a/Python first steps, day 1 -- 2022-11Nov-21.ipynb
+++ b/Python first steps, day 1 -- 2022-11Nov-21.ipynb
@@ -1002,7 +1002,11 @@
    "source": [
     "# Comparison operators\n",
     "\n",
-    "We often want to compa"
+    "We often want to compare two values. Python provides us with many comparison operators:\n",
+    "\n",
+    "- `==` -- are they equal?\n",
+    "- `!=` -- are they unequal? (the inequality operator, which is written as ≠ in math)\n",
+    "- `<` -- is the value on the left less th"
    ]
   }
  ],
