--- a/Python first steps, day 1 -- 2022-11Nov-21.ipynb
+++ b/Python first steps, day 1 -- 2022-11Nov-21.ipynb
@@ -968,7 +968,7 @@
    ],
    "source": [
     "x = 'abcd'\n",
-    "y = 'abcd '\n",
+    "y = 'abcd '   # extra space -- not the same as x!\n",
     "\n",
     "x == y"
    ]
@@ -991,7 +991,7 @@
    ],
    "source": [
     "x = 'abcd'\n",
-    "y = 'Abcd'\n",
+    "y = 'Abcd'     # not the same, with a capital A!\n",
     "\n",
     "x == y"
    ]
@@ -1006,7 +1006,43 @@
     "\n",
     "- `==` -- are they equal?\n",
     "- `!=` -- are they unequal? (the inequality operator, which is written as ≠ in math)\n",
-    "- `<` -- is the value on the left less th"
+    "- `<` -- less than, is the value on the left less than the value on the right?\n",
+    "- `>` -- greater than, is the value on the left greater than the value on the right?\n",
+    "- `<=` -- less than or equal\n",
+    "- `>=` -- greater than or equal\n",
+    "\n",
+    "We can use these on numbers.\n",
+    "\n",
+    "We can also use these on text strings!  In that case, it basically (not exactly) sees \"less than\" as \"earlier in the alphabet.\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'dog' < 'cat'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Conditionals\n",
+    "\n",
+    "A computer "
    ]
   }
  ],
