--- a/Python first steps, day 1 -- 2022-11Nov-21.ipynb
+++ b/Python first steps, day 1 -- 2022-11Nov-21.ipynb
@@ -1042,7 +1042,30 @@
    "source": [
     "# Conditionals\n",
     "\n",
-    "A computer "
+    "A computer program is all about making decisions:\n",
+    "\n",
+    "- When you press a key on the keyboard, the computer needs to know\n",
+    "- When you move your mouse over different areas of the screen, the computer needs to know\n",
+    "- When you enter an incorrect password, the computer needs to know\n",
+    "\n",
+    "In all of these cases, the computer needs to do a comparison (as we saw above), but then make a decision based on the results of that comparison.\n",
+    "\n",
+    "This is known as a \"conditional\" and it is the core of most programming."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "name = input('Enter your name: ')\n",
+    "\n",
+    "if name == 'Reuven':\n",
+    "    print('Hi, boss!')\n",
+    "    print('Nice to see you again!')\n",
+    "else:\n",
+    "    print()"
    ]
   }
  ],
