--- a/Python first steps, day 1 -- 2022-11Nov-21.ipynb
+++ b/Python first steps, day 1 -- 2022-11Nov-21.ipynb
@@ -1061,11 +1061,21 @@
    "source": [
     "name = input('Enter your name: ')\n",
     "\n",
+    "# if is our conditional keyword\n",
+    "# - if looks to its right, and checks for a True or False value\n",
+    "# - if the value is True, then it executes the indented block that follows\n",
+    "# - if the value is False, and there is an \"else\" block, then that executes instead\n",
+    "\n",
+    "# the way that we define a block in Python is with:\n",
+    "# (1) colon at the end of the line\n",
+    "# (2) indentation, traditionally with 4 spaces\n",
+    "# (3) when the indentation ends, the block ends\n",
+    "\n",
     "if name == 'Reuven':\n",
     "    print('Hi, boss!')\n",
     "    print('Nice to see you again!')\n",
     "else:\n",
-    "    print()"
+    "    print('Hello, ' + name + '!')"
    ]
   }
  ],
