--- a/Python first steps, day 1 -- 2022-11Nov-21.ipynb
+++ b/Python first steps, day 1 -- 2022-11Nov-21.ipynb
@@ -1055,9 +1055,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter your name: someone else\n",
+      "Hello, someone else!\n"
+     ]
+    }
+   ],
    "source": [
     "name = input('Enter your name: ')\n",
     "\n",
@@ -1065,6 +1074,10 @@
     "# - if looks to its right, and checks for a True or False value\n",
     "# - if the value is True, then it executes the indented block that follows\n",
     "# - if the value is False, and there is an \"else\" block, then that executes instead\n",
+    "\n",
+    "# If you have if/else, then one of them, and only one of them, is guaranteed to execute\n",
+    "# if you only have an if (no else), then it might or might not\n",
+    "\n",
     "\n",
     "# the way that we define a block in Python is with:\n",
     "# (1) colon at the end of the line\n",
@@ -1077,6 +1090,13 @@
     "else:\n",
     "    print('Hello, ' + name + '!')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
