--- a/Python first steps, day 1 -- 2022-11Nov-21.ipynb
+++ b/Python first steps, day 1 -- 2022-11Nov-21.ipynb
@@ -1092,11 +1092,24 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Writing `if` statements\n",
+    "\n",
+    "```\n",
+    "if CONDITION:\n",
+    "    true-block-line-1\n",
+    "    true-block-line-2\n",
+    "    ...\n",
+    "    true-block-line-n\n",
+    "\n",
+    "else:      # no condition here!\n",
+    "    else-block-line-1\n",
+    "    else-block-line-2\n",
+    "    ...\n",
+    "    else-block-line-n"
+   ]
   }
  ],
  "metadata": {
