--- a/Python first steps, day 1 -- 2022-11Nov-21.ipynb
+++ b/Python first steps, day 1 -- 2022-11Nov-21.ipynb
@@ -1055,15 +1055,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Enter your name: someone else\n",
-      "Hello, someone else!\n"
+     "ename": "IndentationError",
+     "evalue": "expected an indented block after 'if' statement on line 17 (1242392519.py, line 18)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn [45], line 18\u001b[0;36m\u001b[0m\n\u001b[0;31m    print('Hi, boss!')\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block after 'if' statement on line 17\n"
      ]
     }
    ],
@@ -1108,7 +1108,18 @@
     "    else-block-line-1\n",
     "    else-block-line-2\n",
     "    ...\n",
-    "    else-block-line-n"
+    "    else-block-line-n\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Exercise: Which word comes first?\n",
+    "\n",
+    "1. Ask the user to enter one word, and assign it to `first_word`.\n",
+    "2. "
    ]
   }
  ],
