--- a/Python first steps, day 1 -- 2022-11Nov-21.ipynb
+++ b/Python first steps, day 1 -- 2022-11Nov-21.ipynb
@@ -1119,8 +1119,18 @@
     "# Exercise: Which word comes first?\n",
     "\n",
     "1. Ask the user to enter one word, and assign it to `first_word`.\n",
-    "2. "
+    "2. Ask the user to enter a second word, and assign it to `second_word`.\n",
+    "3. Print the word that comes first alphabetically.\n",
+    "\n",
+    "Note: Let's assume that all words will just have letters, all lowercase."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
