--- a/Python first steps, day 1 -- 2022-11Nov-21.ipynb
+++ b/Python first steps, day 1 -- 2022-11Nov-21.ipynb
@@ -1130,7 +1130,13 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "first_word = input('Enter first word: ')\n",
+    "second_word = input('Enter second word: ')\n",
+    "\n",
+    "if first_word < second_word:\n",
+    "    print(first_word + ' comes before')"
+   ]
   }
  ],
  "metadata": {
