--- a/Python first steps, day 1 -- 2022-11Nov-21.ipynb
+++ b/Python first steps, day 1 -- 2022-11Nov-21.ipynb
@@ -1127,16 +1127,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter first word: egg\n",
+      "Enter second word: chicken\n",
+      "chicken comes before egg\n"
+     ]
+    }
+   ],
    "source": [
     "first_word = input('Enter first word: ')\n",
     "second_word = input('Enter second word: ')\n",
     "\n",
     "if first_word < second_word:\n",
-    "    print(first_word + ' comes before')"
+    "    print(first_word + ' comes before ' + second_word)\n",
+    "else:\n",
+    "    print(second_word + ' comes before ' + first_word)\n",
+    "    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter first word: taxi\n",
+      "Enter second word: taxi\n",
+      "taxi comes before taxi\n"
+     ]
+    }
+   ],
+   "source": [
+    "first_word = input('Enter first word: ')\n",
+    "second_word = input('Enter second word: ')\n",
+    "\n",
+    "if first_word < second_word:\n",
+    "    print(first_word + ' comes before ' + second_word)\n",
+    "else:\n",
+    "    print(second_word + ' comes before ' + first_word)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
