--- a/Python first steps, day 1 -- 2022-11Nov-21.ipynb
+++ b/Python first steps, day 1 -- 2022-11Nov-21.ipynb
@@ -1153,27 +1153,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter first word: taxi\n",
-      "Enter second word: taxi\n",
-      "taxi comes before taxi\n"
+      "Enter first word: cat-man\n",
+      "Enter second word: cat-woman\n",
+      "cat-man comes before cat-woman\n"
      ]
     }
    ],
    "source": [
+    "# how can we handle equality?\n",
+    "\n",
     "first_word = input('Enter first word: ')\n",
     "second_word = input('Enter second word: ')\n",
     "\n",
-    "if first_word < second_word:\n",
-    "    print(first_word + ' comes before ' + second_word)\n",
+    "if first_word == second_word:\n",
+    "    print('You entered ' + first_word + 'twice!')\n",
+    "\n",
     "else:\n",
-    "    print(second_word + ' comes before ' + first_word)\n",
+    "    if first_word < second_word:\n",
+    "        print(first_word + ' comes before ' + second_word)\n",
+    "    else:\n",
+    "        print(second_word + ' comes before ' + first_word)\n",
     "    "
    ]
   },
