--- a/Python first steps, day 1 -- 2022-11Nov-21.ipynb
+++ b/Python first steps, day 1 -- 2022-11Nov-21.ipynb
@@ -1184,11 +1184,22 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "The comparison done by `==` and `<` and friends is not alphabetical but lexicographical, meaning based on all of the characters that the computer knows in Unicode -- including all languages, all emoji, all symbols, etc.\n",
+    "\n",
+    "In Unicode, all capital letters come before all lowercase letters, all numbers come before all letters, etc."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# If you see a `*` on the left of Jupyter\n",
+    "\n",
+    "This means that it's processing something. This is normal when things take a long time, or if you have `input` running.  But it can also happen when c"
+   ]
   }
  ],
  "metadata": {
