--- a/Python first steps, day 1 -- 2022-11Nov-21.ipynb
+++ b/Python first steps, day 1 -- 2022-11Nov-21.ipynb
@@ -1198,7 +1198,22 @@
    "source": [
     "# If you see a `*` on the left of Jupyter\n",
     "\n",
-    "This means that it's processing something. This is normal when things take a long time, or if you have `input` running.  But it can also happen when c"
+    "This means that it's processing something. This is normal when things take a long time, or if you have `input` running.  But it can also happen when communication between Jupyter (in your browser) and the back-end system it depends on lose contact.\n",
+    "\n",
+    "Go to the Kernel menu, and choose \"interrupt.\" This works about 80-90% of the time.  You should then rerun the cell.\n",
+    "\n",
+    "If that doesn't work, go to Kernel and choose \"restart.\" You'll lose all defined variables, but the cells will still be around."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Next up\n",
+    "\n",
+    "1. More complex conditionals\n",
+    "    - `elif`\n",
+    "    - `and`, `or`"
    ]
   }
  ],
