--- a/Python first steps, day 1 -- 2022-11Nov-21.ipynb
+++ b/Python first steps, day 1 -- 2022-11Nov-21.ipynb
@@ -1213,8 +1213,19 @@
     "\n",
     "1. More complex conditionals\n",
     "    - `elif`\n",
-    "    - `and`, `or`"
+    "    - `and`, `or`, and `not`\n",
+    "2. Comparing numbers\n",
+    "    - Turning strings into numbers\n",
+    "    - Integrating numbers into our strings (f-strings)\n",
+    "    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
