--- a/Python first steps, day 1 -- 2022-11Nov-21.ipynb
+++ b/Python first steps, day 1 -- 2022-11Nov-21.ipynb
@@ -1225,7 +1225,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "x = 10\n",
+    "\n",
+    "if x == 10:\n",
+    "    print('a')\n",
+    "    print('b')\n",
+    "    print('c')"
+   ]
   }
  ],
  "metadata": {
