--- a/Python first steps, day 1 -- 2022-11Nov-21.ipynb
+++ b/Python first steps, day 1 -- 2022-11Nov-21.ipynb
@@ -1222,16 +1222,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a\n",
+      "b\n",
+      "c\n"
+     ]
+    }
+   ],
    "source": [
     "x = 10\n",
     "\n",
     "if x == 10:\n",
     "    print('a')\n",
     "    print('b')\n",
-    "    print('c')"
+    "    print('c')\n",
+    "else:\n",
+    "    print('d')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "first_word = input('Enter first word: ')\n",
+    "second_word = input('Enter second word: ')\n",
+    "\n",
+    "if first_word < second_word:\n",
+    "    print(first_word + ' comes before ' + second_word)\n",
+    "else:\n",
+    "    print(second_word + ' comes before ' + first_word)"
    ]
   }
  ],
