--- a/Python first steps, day 1 -- 2022-11Nov-21.ipynb
+++ b/Python first steps, day 1 -- 2022-11Nov-21.ipynb
@@ -1252,13 +1252,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# how can we handle equality?\n",
+    "\n",
     "first_word = input('Enter first word: ')\n",
     "second_word = input('Enter second word: ')\n",
     "\n",
-    "if first_word < second_word:\n",
-    "    print(first_word + ' comes before ' + second_word)\n",
-    "else:\n",
-    "    print(second_word + ' comes before ' + first_word)"
+    "if first_word == second_word:\n",
+    "    print('You entered ' + first_word + 'twice!')\n",
+    "\n",
+    "elif first_word < second_word:\n",
+    "        print(first_word + ' comes before ' + second_word)\n",
+    "    else:\n",
+    "        print(second_word + ' comes before ' + first_word)"
    ]
   }
  ],
