--- a/Python first steps, day 1 -- 2022-11Nov-21.ipynb
+++ b/Python first steps, day 1 -- 2022-11Nov-21.ipynb
@@ -1257,13 +1257,29 @@
     "first_word = input('Enter first word: ')\n",
     "second_word = input('Enter second word: ')\n",
     "\n",
+    "# when we have if-elif-else, the first one to be True executes\n",
+    "# if none is True, then else executes\n",
+    "# one, and only one, is guaranteed to execute.\n",
+    "\n",
+    "# you can have as many elif clauses as you want\n",
+    "\n",
     "if first_word == second_word:\n",
     "    print('You entered ' + first_word + 'twice!')\n",
-    "\n",
     "elif first_word < second_word:\n",
-    "        print(first_word + ' comes before ' + second_word)\n",
-    "    else:\n",
-    "        print(second_word + ' comes before ' + first_word)"
+    "    print(first_word + ' comes before ' + second_word)\n",
+    "else:\n",
+    "    print(second_word + ' comes before ' + first_word)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Compound conditions\n",
+    "\n",
+    "We've seen how `if` (and `elif`) can check for all sorts of conditions.\n",
+    "\n",
+    "But what if w "
    ]
   }
  ],
