--- a/Python first steps, day 1 -- 2022-11Nov-21.ipynb
+++ b/Python first steps, day 1 -- 2022-11Nov-21.ipynb
@@ -1279,8 +1279,62 @@
     "\n",
     "We've seen how `if` (and `elif`) can check for all sorts of conditions.\n",
     "\n",
-    "But what if w "
+    "But what if we want something happen only if *two* conditions are `True`?\n",
+    "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Yes!\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 10\n",
+    "y = 20\n",
+    "\n",
+    "# I only want to print \"yes\" if x is 10 and y is 20\n",
+    "\n",
+    "if x == 10:\n",
+    "    if y == 20:\n",
+    "        print('Yes!')   # this will work, and your colleagues will hate you"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Yes!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# a much better way to do this is with \"and\", which takes a True/False value on the left,\n",
+    "# and a True/False value on the right -- and if both are True, it returns True. Otherwise, False\n",
+    "\n",
+    "#    True  and  True  --> True\n",
+    "if x == 10 and y == 20:\n",
+    "    print('Yes!')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
