--- a/Python first steps, day 1 -- 2022-11Nov-21.ipynb
+++ b/Python first steps, day 1 -- 2022-11Nov-21.ipynb
@@ -1331,10 +1331,53 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = 10\n",
+    "y = 30\n",
+    "\n",
+    "#     True  and  False --> False\n",
+    "if x == 10 and y == 20:\n",
+    "    print('Yes!')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Yes!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# we can also use \"or\" to combine two conditions\n",
+    "# when we do that, as long as one of them is True, the entire expression is True\n",
+    "\n",
+    "x = 10\n",
+    "y = 20\n",
+    "\n",
+    "#    True --> True!  We don't even check the second condition!\n",
+    "if x == 10 or y == 9876:\n",
+    "    print('Yes!')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#    False \n",
+    "if x == 9876 or y == 20:\n",
+    "    print('Yes!')"
+   ]
   }
  ],
  "metadata": {
