--- a/Python first steps, day 1 -- 2022-11Nov-21.ipynb
+++ b/Python first steps, day 1 -- 2022-11Nov-21.ipynb
@@ -1153,6 +1153,32 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter first word: coffee\n",
+      "Enter second word: coffee\n",
+      "coffee comes before coffee\n"
+     ]
+    }
+   ],
+   "source": [
+    "first_word = input('Enter first word: ')\n",
+    "second_word = input('Enter second word: ')\n",
+    "\n",
+    "if first_word < second_word:\n",
+    "    print(first_word + ' comes before ' + second_word)\n",
+    "else:\n",
+    "    print(second_word + ' comes before ' + first_word)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 49,
    "metadata": {},
    "outputs": [
@@ -1370,13 +1396,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Yes!\n"
+     ]
+    }
+   ],
    "source": [
-    "#    False \n",
+    "#    False   or True --> True\n",
     "if x == 9876 or y == 20:\n",
     "    print('Yes!')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Complex conditionals\n",
+    "\n"
    ]
   }
  ],
