--- a/Python first steps, day 1 -- 2022-11Nov-21.ipynb
+++ b/Python first steps, day 1 -- 2022-11Nov-21.ipynb
@@ -1418,7 +1418,19 @@
    "metadata": {},
    "source": [
     "# Complex conditionals\n",
-    "\n"
+    "\n",
+    "Using `if`, `elif`, and `else` along with `and` and `or`, we can have a wide array of different circumstances and actions.  \n",
+    "\n",
+    "You can check all sorts of variables and their values, and you can execute whatever you want, at whatever length, inside of the indented blocks."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Exercise: Name and company\n",
+    "\n",
+    "1. Ask the user to enter both their name and their company, and assign these "
    ]
   }
  ],
