--- a/Python first steps, day 1 -- 2022-11Nov-21.ipynb
+++ b/Python first steps, day 1 -- 2022-11Nov-21.ipynb
@@ -1419,7 +1419,7 @@
    "source": [
     "# Complex conditionals\n",
     "\n",
-    "Using `if`, `elif`, and `else` along with `and` and `or`, we can have a wide array of different circumstances and actions.  \n",
+    "Using `if`, `elif`, and `else` along with `and` and `or` and all of our conditional operators, such as `==` and `!=`, we can have a wide array of different circumstances and actions.  \n",
     "\n",
     "You can check all sorts of variables and their values, and you can execute whatever you want, at whatever length, inside of the indented blocks."
    ]
@@ -1430,8 +1430,20 @@
    "source": [
     "# Exercise: Name and company\n",
     "\n",
-    "1. Ask the user to enter both their name and their company, and assign these "
+    "1. Ask the user to enter both their name and their company, and assign these to two separate variables.\n",
+    "2. Print one of four things:\n",
+    "    - You must be me -- if the name and company are the same as you\n",
+    "    - We are colleagues -- if the company is the same, but the name is not\n",
+    "    - You have a great name -- if the name is the same, but the company is not\n",
+    "    - Something snarky - if the name and company are both different"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
