--- a/Python first steps, day 1 -- 2022-11Nov-21.ipynb
+++ b/Python first steps, day 1 -- 2022-11Nov-21.ipynb
@@ -1443,7 +1443,12 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "name = input('Enter your name: ')\n",
+    "company = input('Enter your company: ')\n",
+    "\n",
+    "if name == 'Reuven' and company == \"O'Reilly\""
+   ]
   }
  ],
  "metadata": {
