--- a/Python first steps, day 1 -- 2022-11Nov-21.ipynb
+++ b/Python first steps, day 1 -- 2022-11Nov-21.ipynb
@@ -1447,7 +1447,15 @@
     "name = input('Enter your name: ')\n",
     "company = input('Enter your company: ')\n",
     "\n",
-    "if name == 'Reuven' and company == \"O'Reilly\""
+    "if name == 'Reuven' and company == \"O'Reilly\":\n",
+    "    print('Hey, you must be me!')\n",
+    "elif name == 'Reuven':    # implicitly, company ≠ O'Reilly\n",
+    "    print('Great name, but you work elsewhere')\n",
+    "elif company == \"O'Reilly\":   # implicitly, name ≠ Reuven\n",
+    "    print('We must be colleagues! How swell!')\n",
+    "else:  #  here, nothing is equal\n",
+    "    print('You have a bad name and a bad employer')\n",
+    "    "
    ]
   }
  ],
