--- a/Python first steps, day 1 -- 2022-11Nov-21.ipynb
+++ b/Python first steps, day 1 -- 2022-11Nov-21.ipynb
@@ -1440,9 +1440,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter your name: abcd\n",
+      "Enter your company: efgh\n",
+      "You have a bad name and a bad employer\n"
+     ]
+    }
+   ],
    "source": [
     "name = input('Enter your name: ')\n",
     "company = input('Enter your company: ')\n",
@@ -1454,9 +1464,38 @@
     "elif company == \"O'Reilly\":   # implicitly, name ≠ Reuven\n",
     "    print('We must be colleagues! How swell!')\n",
     "else:  #  here, nothing is equal\n",
-    "    print('You have a bad name and a bad employer')\n",
-    "    "
+    "    print('You have a bad name and a bad employer')   "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# option-equal on a Mac does ≠"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Numbers\n",
+    "\n",
+    "Python (and most programming languages) supports two different types of numbers:\n",
+    "\n",
+    "- Integers (`int`), which are whole numbers\n",
+    "- Floats (`float`), which have a decimal point and a fractional part\n",
+    "\n",
+    "We'll mostly use integers."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
