--- a/Python first steps, day 1 -- 2022-11Nov-21.ipynb
+++ b/Python first steps, day 1 -- 2022-11Nov-21.ipynb
@@ -1870,14 +1870,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 82,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "My favorite number is 10\n"
+     ]
+    }
+   ],
    "source": [
     "# I can get a string based on an integer with the str() builtin\n",
     "\n",
-    "print('My favorite number is ' + str(x))  # now we're joining "
+    "print('My favorite number is ' + str(x))  # now we're joining two strings"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "My favorite number is 10\n"
+     ]
+    }
+   ],
+   "source": [
+    "# but ... yuck! We can do better with f-strings:\n",
+    "\n",
+    "# - First character is f, before the opening quote\n",
+    "# - Inside of the string is totally normal...\n",
+    "# - ...Except in {}, where we can have Python variables and expressions\n",
+    "\n",
+    "print(f'My favorite number is {x}')   # here, it'll work fine, automatically running str() behind the scenes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "invalid literal for int() with base 10: '123abc'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [84], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m s \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m123abc\u001b[39m\u001b[38;5;124m'\u001b[39m  \u001b[38;5;66;03m# this is a hex number, in base 16\u001b[39;00m\n\u001b[0;32m----> 3\u001b[0m \u001b[38;5;28;43mint\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43ms\u001b[49m\u001b[43m)\u001b[49m  \u001b[38;5;66;03m# this will not work!\u001b[39;00m\n",
+      "\u001b[0;31mValueError\u001b[0m: invalid literal for int() with base 10: '123abc'"
+     ]
+    }
+   ],
+   "source": [
+    "s = '123abc'  # this is a hex number, in base 16\n",
+    "\n",
+    "int(s)  # this will not work!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1194684"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "int(s, 16)  # give me an integer, which is decimal, based on the hex number in s"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
