--- a/Python first steps, day 1 -- 2022-11Nov-21.ipynb
+++ b/Python first steps, day 1 -- 2022-11Nov-21.ipynb
@@ -1954,6 +1954,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Exercise: Guessing game\n",
+    "\n",
+    "1. We'll generate a random integer between 0-100, and assign it to `number`.\n",
+    "2. Print `number`, so that we can debug things easily.\n",
+    "3. Ask the user (only once!) to guess the number.  Give one of the following results:\n",
+    "    - Good job!\n",
+    "    - Too low!\n",
+    "    - Too high!\n",
+    "    \n",
+    "Think about a few things:\n",
+    "\n",
+    "1. Don't forget that the result of `input` is always a string. You'll need to convert it.\n",
+    "2. Assume that the user will only enter digits.\n",
+    "3. Use all of the conditional stuff we've been talking about.\n",
+    "\n",
+    "To get a random integer, use the following Python code"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
