--- a/Python first steps, day 1 -- 2022-11Nov-21.ipynb
+++ b/Python first steps, day 1 -- 2022-11Nov-21.ipynb
@@ -1972,7 +1972,12 @@
     "2. Assume that the user will only enter digits.\n",
     "3. Use all of the conditional stuff we've been talking about.\n",
     "\n",
-    "To get a random integer, use the following Python code"
+    "To get a random integer, use the following Python code:\n",
+    "\n",
+    "```python\n",
+    "import random                     # loads the random library\n",
+    "number = random.randint(0, 100)   # chooses a number from 0-100, and assigns to number\n",
+    "```"
    ]
   },
   {
