--- a/Python first steps, day 1 -- 2022-11Nov-21.ipynb
+++ b/Python first steps, day 1 -- 2022-11Nov-21.ipynb
@@ -1984,6 +1984,34 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Your number is 83\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "number = random.randint(0, 100)\n",
+    "print(f'Your number is {number}')\n",
+    "\n",
+    "guess = input('Enter guess: ')\n",
+    "\n",
+    "if guess == number:\n",
+    "    print('You got it!')\n",
+    "elif guess < number:\n",
+    "    print('Too low!')\n",
+    "else:\n",
+    "    print('Too high!')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": []
   }
