--- a/Python first steps, day 1 -- 2022-11Nov-21.ipynb
+++ b/Python first steps, day 1 -- 2022-11Nov-21.ipynb
@@ -1982,14 +1982,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Your number is 83\n"
+      "Your number is 55\n",
+      "Enter guess: 100\n",
+      "Too high!\n"
      ]
     }
    ],
@@ -1999,6 +2001,7 @@
     "print(f'Your number is {number}')\n",
     "\n",
     "guess = input('Enter guess: ')\n",
+    "guess = int(guess)  # this works great, if guess only contains digits\n",
     "\n",
     "if guess == number:\n",
     "    print('You got it!')\n",
