--- a/Python first steps, day 1 -- 2022-11Nov-21.ipynb
+++ b/Python first steps, day 1 -- 2022-11Nov-21.ipynb
@@ -2012,6 +2012,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Next up\n",
+    "\n",
+    "1. Strings!\n",
+    "    - Retrieving from them\n",
+    "    - Searching in them\n",
+    "    - Strings are *immutable*\n",
+    "    - Slices from them\n",
+    "2. If we have time, we'll discuss a handful of string \"methods,\" too"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
